Fix ticket link alignment

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -104,6 +104,7 @@
 
 .tribe-events .tribe-events-calendar-summary a.tribe-events-c-small-cta__text {
 	border-bottom: 1px solid #334aff;
+	margin-left: 0;
 }
 
 .tribe-events .tribe-events-calendar-summary .tribe-events-c-small-cta__price {
